syntax = "proto3";

package gateway;

import "search-request.proto";

service ProviderGateway {
  rpc getClientById (SearchRequest) returns (ClientReply) {};
}

message ClientReply {
  string json = 1;
}
