syntax = "proto3";

message  {
  string objectId = 1;
  string testOrderReportDistributionLogId = 2;
  string reportNo = 3;
  string timeDistributed = 4;
  string comment = 5;
  int physicianId = 6;
  int clientId = 7;
  string physicianName = 8;
  string clientName = 9;
  string distributionType = 10;
  bool errorInDistribution = 11;
  bool caseDistributed = 12;
  string dateDistributed = 13;
}
